// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createCliDemoGuidePrompt > matches the 'auth-required' prompt shape 1`] = `
{
  "agentCapabilities": {
    "can": [
      "open allowed local routes",
      "click visible links or buttons by their accessible name",
      "type safe demo text into visible fields",
      "upload only approved local files",
      "wait for visible text",
      "take a screenshot",
      "finish a step when the requested screen is already visible",
    ],
    "cannot": [
      "point at the screen",
      "highlight UI",
      "narrate or explain out loud",
      "use CSS selectors",
      "operate hidden controls",
      "invent screens, blank workspaces, projects, templates, or export presets",
    ],
  },
  "demo": {
    "appContext": {
      "projectDirectory": "web",
      "projectType": "web",
      "routes": [
        {
          "confidence": "low",
          "name": "Show /dashboard/hooks",
          "path": "/dashboard/hooks",
        },
      ],
      "workflowHints": [
        {
          "actions": [
            "Hooks to learn from",
            "Save Hook Lab",
            "Accept hook",
          ],
          "buttons": [
            "Save Hook Lab",
            "Accept hook",
          ],
          "featureLabels": [
            "Hook Lab",
          ],
          "inputs": [
            "Hooks to learn from",
            "Hooks to avoid",
            "Main goal",
            "Tone",
          ],
          "routePath": "/dashboard/hooks",
          "sourceFiles": [
            "app/_components/hooks/ProductHookMemoryFields.tsx",
          ],
          "summary": "Inputs: Hooks to learn from, Hooks to avoid. Buttons: Save Hook Lab, Accept hook",
          "title": "Hooks workflow",
        },
      ],
    },
    "appType": "web",
    "availableFlows": [
      {
        "confidence": "medium",
        "name": "Open the product",
        "path": "/",
      },
      {
        "confidence": "medium",
        "name": "Show the main workspace",
        "path": "/dashboard",
      },
      {
        "confidence": "low",
        "name": "Show /dashboard/library",
        "path": "/dashboard/library",
      },
      {
        "confidence": "low",
        "name": "Show /dashboard/stitchr",
        "path": "/dashboard/stitchr",
      },
    ],
    "flowName": "Dashboard",
    "flowPath": "/dashboard",
    "goal": "Show sign in and the main workspace",
    "targetAudience": "busy founders recording product demos",
  },
  "examples": {
    "bad": [
      "Point out the main dashboard",
      "Highlight the template picker",
      "Show where a creator would upload a clip",
      "Click to start a new project",
      "Highlight export preset options",
    ],
    "good": [
      "Open the dashboard",
      "Click Upload",
      "Open the Library page",
      "Open Stitchr from the sidebar",
      "Review the saved clips on the dashboard",
    ],
  },
  "outputShape": {
    "goal": "Plain-language demo goal.",
    "steps": [
      {
        "label": "Step label only.",
      },
    ],
    "title": "Short guide title.",
  },
  "product": {
    "audience": "Busy founders who record product demos.",
    "details": "A tool for turning product recordings into short videos.",
    "inferredPainPoints": [
      "Recording demos takes too long.",
    ],
    "inferredProblem": "Demo content is slow to make.",
    "name": "ClipStitchr",
    "websiteUrl": "https://clipstitchr.test",
  },
  "rules": {
    "addCreateSemantics": "For add, create, save, or update goals, prefer typing into matching inputs before using save/create buttons. Treat Accept, Reject, Copy, Save as winner, and similar history or feedback controls as actions for existing items only unless demo.goal explicitly asks to accept, reject, copy, or mark an existing item.",
    "agentRunnable": true,
    "allowedStepVerbs": "Prefer Open, Click, Choose, Select, Upload, Wait for, Review, Use, or Finish on.",
    "bannedStepVerbs": [
      "Point out",
      "Highlight",
      "Explain",
      "Describe",
      "Mention",
      "Talk through",
      "Show where",
      "Show how",
    ],
    "hookLabSemantics": "For Hook Lab goals that ask to add new hooks, save popular hooks, or add hooks to learn from, use the Hooks to learn from field and Save Hook Lab. Do not create steps that accept existing hook cards unless demo.goal explicitly asks to accept existing hooks.",
    "maxSteps": 8,
    "minSteps": 3,
    "missingSetup": "When the goal depends on existing media, connected accounts, saved clips, generated results, or product setup, make steps that open the relevant page and use visible assets. Do not claim unavailable setup exists.",
    "noDestructiveActions": true,
    "noInventedUi": true,
    "noSecrets": true,
    "noSelectors": true,
    "primaryGoal": "Treat demo.goal as the main thing to demonstrate. Do not replace a specific user request with a generic workspace tour.",
    "routeChoice": "If demo.goal names a visible tool and a matching route exists in availableFlows, build the guide around that route.",
    "stepCount": 5,
    "stepLabelOnly": true,
    "typing": "When the goal asks to add safe demo text, write steps that type the actual demo text into the real matching field. Do not call it approved text unless the user provided approved values.",
    "useAppContext": "Use appContext workflow hints to choose real routes, feature labels, field labels, and button names from the app. First choose the workflow hint that matches demo.goal, then use only controls from that workflow. If the user says to add something and appContext lists a matching input, write a step around that visible input and a real matching save/create button from the same workflow. Do not invent Add buttons.",
    "useKnownRoutesWhenPossible": true,
  },
  "task": "Create a browser-action checklist for a guarded ClipStitchr demo agent.",
}
`;

exports[`createCliDemoGuidePrompt > matches the 'loading-process' prompt shape 1`] = `
{
  "agentCapabilities": {
    "can": [
      "open allowed local routes",
      "click visible links or buttons by their accessible name",
      "type safe demo text into visible fields",
      "upload only approved local files",
      "wait for visible text",
      "take a screenshot",
      "finish a step when the requested screen is already visible",
    ],
    "cannot": [
      "point at the screen",
      "highlight UI",
      "narrate or explain out loud",
      "use CSS selectors",
      "operate hidden controls",
      "invent screens, blank workspaces, projects, templates, or export presets",
    ],
  },
  "demo": {
    "appContext": {
      "projectDirectory": "web",
      "projectType": "web",
      "routes": [
        {
          "confidence": "low",
          "name": "Show /dashboard/hooks",
          "path": "/dashboard/hooks",
        },
      ],
      "workflowHints": [
        {
          "actions": [
            "Hooks to learn from",
            "Save Hook Lab",
            "Accept hook",
          ],
          "buttons": [
            "Save Hook Lab",
            "Accept hook",
          ],
          "featureLabels": [
            "Hook Lab",
          ],
          "inputs": [
            "Hooks to learn from",
            "Hooks to avoid",
            "Main goal",
            "Tone",
          ],
          "routePath": "/dashboard/hooks",
          "sourceFiles": [
            "app/_components/hooks/ProductHookMemoryFields.tsx",
          ],
          "summary": "Inputs: Hooks to learn from, Hooks to avoid. Buttons: Save Hook Lab, Accept hook",
          "title": "Hooks workflow",
        },
      ],
    },
    "appType": "web",
    "availableFlows": [
      {
        "confidence": "medium",
        "name": "Open the product",
        "path": "/",
      },
      {
        "confidence": "medium",
        "name": "Show the main workspace",
        "path": "/dashboard",
      },
      {
        "confidence": "low",
        "name": "Show /dashboard/library",
        "path": "/dashboard/library",
      },
      {
        "confidence": "low",
        "name": "Show /dashboard/stitchr",
        "path": "/dashboard/stitchr",
      },
    ],
    "flowName": "Dashboard",
    "flowPath": "/dashboard",
    "goal": "Show upload processing and review the finished result",
    "targetAudience": "busy founders recording product demos",
  },
  "examples": {
    "bad": [
      "Point out the main dashboard",
      "Highlight the template picker",
      "Show where a creator would upload a clip",
      "Click to start a new project",
      "Highlight export preset options",
    ],
    "good": [
      "Open the dashboard",
      "Click Upload",
      "Open the Library page",
      "Open Stitchr from the sidebar",
      "Review the saved clips on the dashboard",
    ],
  },
  "outputShape": {
    "goal": "Plain-language demo goal.",
    "steps": [
      {
        "label": "Step label only.",
      },
    ],
    "title": "Short guide title.",
  },
  "product": {
    "audience": "Busy founders who record product demos.",
    "details": "A tool for turning product recordings into short videos.",
    "inferredPainPoints": [
      "Recording demos takes too long.",
    ],
    "inferredProblem": "Demo content is slow to make.",
    "name": "ClipStitchr",
    "websiteUrl": "https://clipstitchr.test",
  },
  "rules": {
    "addCreateSemantics": "For add, create, save, or update goals, prefer typing into matching inputs before using save/create buttons. Treat Accept, Reject, Copy, Save as winner, and similar history or feedback controls as actions for existing items only unless demo.goal explicitly asks to accept, reject, copy, or mark an existing item.",
    "agentRunnable": true,
    "allowedStepVerbs": "Prefer Open, Click, Choose, Select, Upload, Wait for, Review, Use, or Finish on.",
    "bannedStepVerbs": [
      "Point out",
      "Highlight",
      "Explain",
      "Describe",
      "Mention",
      "Talk through",
      "Show where",
      "Show how",
    ],
    "hookLabSemantics": "For Hook Lab goals that ask to add new hooks, save popular hooks, or add hooks to learn from, use the Hooks to learn from field and Save Hook Lab. Do not create steps that accept existing hook cards unless demo.goal explicitly asks to accept existing hooks.",
    "maxSteps": 8,
    "minSteps": 3,
    "missingSetup": "When the goal depends on existing media, connected accounts, saved clips, generated results, or product setup, make steps that open the relevant page and use visible assets. Do not claim unavailable setup exists.",
    "noDestructiveActions": true,
    "noInventedUi": true,
    "noSecrets": true,
    "noSelectors": true,
    "primaryGoal": "Treat demo.goal as the main thing to demonstrate. Do not replace a specific user request with a generic workspace tour.",
    "routeChoice": "If demo.goal names a visible tool and a matching route exists in availableFlows, build the guide around that route.",
    "stepCount": 5,
    "stepLabelOnly": true,
    "typing": "When the goal asks to add safe demo text, write steps that type the actual demo text into the real matching field. Do not call it approved text unless the user provided approved values.",
    "useAppContext": "Use appContext workflow hints to choose real routes, feature labels, field labels, and button names from the app. First choose the workflow hint that matches demo.goal, then use only controls from that workflow. If the user says to add something and appContext lists a matching input, write a step around that visible input and a real matching save/create button from the same workflow. Do not invent Add buttons.",
    "useKnownRoutesWhenPossible": true,
  },
  "task": "Create a browser-action checklist for a guarded ClipStitchr demo agent.",
}
`;

exports[`createCliDemoGuidePrompt > matches the 'minimal-product' prompt shape 1`] = `
{
  "agentCapabilities": {
    "can": [
      "open allowed local routes",
      "click visible links or buttons by their accessible name",
      "type safe demo text into visible fields",
      "upload only approved local files",
      "wait for visible text",
      "take a screenshot",
      "finish a step when the requested screen is already visible",
    ],
    "cannot": [
      "point at the screen",
      "highlight UI",
      "narrate or explain out loud",
      "use CSS selectors",
      "operate hidden controls",
      "invent screens, blank workspaces, projects, templates, or export presets",
    ],
  },
  "demo": {
    "appContext": {
      "projectDirectory": "web",
      "projectType": "web",
      "routes": [
        {
          "confidence": "low",
          "name": "Show /dashboard/hooks",
          "path": "/dashboard/hooks",
        },
      ],
      "workflowHints": [
        {
          "actions": [
            "Hooks to learn from",
            "Save Hook Lab",
            "Accept hook",
          ],
          "buttons": [
            "Save Hook Lab",
            "Accept hook",
          ],
          "featureLabels": [
            "Hook Lab",
          ],
          "inputs": [
            "Hooks to learn from",
            "Hooks to avoid",
            "Main goal",
            "Tone",
          ],
          "routePath": "/dashboard/hooks",
          "sourceFiles": [
            "app/_components/hooks/ProductHookMemoryFields.tsx",
          ],
          "summary": "Inputs: Hooks to learn from, Hooks to avoid. Buttons: Save Hook Lab, Accept hook",
          "title": "Hooks workflow",
        },
      ],
    },
    "appType": "web",
    "availableFlows": [
      {
        "confidence": "medium",
        "name": "Open the product",
        "path": "/",
      },
      {
        "confidence": "medium",
        "name": "Show the main workspace",
        "path": "/dashboard",
      },
      {
        "confidence": "low",
        "name": "Show /dashboard/library",
        "path": "/dashboard/library",
      },
      {
        "confidence": "low",
        "name": "Show /dashboard/stitchr",
        "path": "/dashboard/stitchr",
      },
    ],
    "goal": "Show the upload flow",
    "targetAudience": "people evaluating this product",
  },
  "examples": {
    "bad": [
      "Point out the main dashboard",
      "Highlight the template picker",
      "Show where a creator would upload a clip",
      "Click to start a new project",
      "Highlight export preset options",
    ],
    "good": [
      "Open the dashboard",
      "Click Upload",
      "Open the Library page",
      "Open Stitchr from the sidebar",
      "Review the saved clips on the dashboard",
    ],
  },
  "outputShape": {
    "goal": "Plain-language demo goal.",
    "steps": [
      {
        "label": "Step label only.",
      },
    ],
    "title": "Short guide title.",
  },
  "product": {
    "audience": "",
    "details": "",
    "inferredPainPoints": [],
    "name": "ClipStitchr",
  },
  "rules": {
    "addCreateSemantics": "For add, create, save, or update goals, prefer typing into matching inputs before using save/create buttons. Treat Accept, Reject, Copy, Save as winner, and similar history or feedback controls as actions for existing items only unless demo.goal explicitly asks to accept, reject, copy, or mark an existing item.",
    "agentRunnable": true,
    "allowedStepVerbs": "Prefer Open, Click, Choose, Select, Upload, Wait for, Review, Use, or Finish on.",
    "bannedStepVerbs": [
      "Point out",
      "Highlight",
      "Explain",
      "Describe",
      "Mention",
      "Talk through",
      "Show where",
      "Show how",
    ],
    "hookLabSemantics": "For Hook Lab goals that ask to add new hooks, save popular hooks, or add hooks to learn from, use the Hooks to learn from field and Save Hook Lab. Do not create steps that accept existing hook cards unless demo.goal explicitly asks to accept existing hooks.",
    "maxSteps": 8,
    "minSteps": 3,
    "missingSetup": "When the goal depends on existing media, connected accounts, saved clips, generated results, or product setup, make steps that open the relevant page and use visible assets. Do not claim unavailable setup exists.",
    "noDestructiveActions": true,
    "noInventedUi": true,
    "noSecrets": true,
    "noSelectors": true,
    "primaryGoal": "Treat demo.goal as the main thing to demonstrate. Do not replace a specific user request with a generic workspace tour.",
    "routeChoice": "If demo.goal names a visible tool and a matching route exists in availableFlows, build the guide around that route.",
    "stepCount": 5,
    "stepLabelOnly": true,
    "typing": "When the goal asks to add safe demo text, write steps that type the actual demo text into the real matching field. Do not call it approved text unless the user provided approved values.",
    "useAppContext": "Use appContext workflow hints to choose real routes, feature labels, field labels, and button names from the app. First choose the workflow hint that matches demo.goal, then use only controls from that workflow. If the user says to add something and appContext lists a matching input, write a step around that visible input and a real matching save/create button from the same workflow. Do not invent Add buttons.",
    "useKnownRoutesWhenPossible": true,
  },
  "task": "Create a browser-action checklist for a guarded ClipStitchr demo agent.",
}
`;

exports[`createCliDemoGuidePrompt > matches the 'mobile' prompt shape 1`] = `
{
  "agentCapabilities": {
    "can": [
      "open allowed local routes",
      "click visible links or buttons by their accessible name",
      "type safe demo text into visible fields",
      "upload only approved local files",
      "wait for visible text",
      "take a screenshot",
      "finish a step when the requested screen is already visible",
    ],
    "cannot": [
      "point at the screen",
      "highlight UI",
      "narrate or explain out loud",
      "use CSS selectors",
      "operate hidden controls",
      "invent screens, blank workspaces, projects, templates, or export presets",
    ],
  },
  "demo": {
    "appContext": {
      "projectDirectory": "web",
      "projectType": "web",
      "routes": [
        {
          "confidence": "low",
          "name": "Show /dashboard/hooks",
          "path": "/dashboard/hooks",
        },
      ],
      "workflowHints": [
        {
          "actions": [
            "Hooks to learn from",
            "Save Hook Lab",
            "Accept hook",
          ],
          "buttons": [
            "Save Hook Lab",
            "Accept hook",
          ],
          "featureLabels": [
            "Hook Lab",
          ],
          "inputs": [
            "Hooks to learn from",
            "Hooks to avoid",
            "Main goal",
            "Tone",
          ],
          "routePath": "/dashboard/hooks",
          "sourceFiles": [
            "app/_components/hooks/ProductHookMemoryFields.tsx",
          ],
          "summary": "Inputs: Hooks to learn from, Hooks to avoid. Buttons: Save Hook Lab, Accept hook",
          "title": "Hooks workflow",
        },
      ],
    },
    "appType": "ios",
    "availableFlows": [
      {
        "confidence": "medium",
        "name": "Open the product",
        "path": "/",
      },
      {
        "confidence": "medium",
        "name": "Show the main workspace",
        "path": "/dashboard",
      },
      {
        "confidence": "low",
        "name": "Show /dashboard/library",
        "path": "/dashboard/library",
      },
      {
        "confidence": "low",
        "name": "Show /dashboard/stitchr",
        "path": "/dashboard/stitchr",
      },
    ],
    "flowName": "Mobile onboarding",
    "goal": "Show the upload flow",
    "targetAudience": "busy founders recording product demos",
  },
  "examples": {
    "bad": [
      "Point out the main dashboard",
      "Highlight the template picker",
      "Show where a creator would upload a clip",
      "Click to start a new project",
      "Highlight export preset options",
    ],
    "good": [
      "Open the dashboard",
      "Click Upload",
      "Open the Library page",
      "Open Stitchr from the sidebar",
      "Review the saved clips on the dashboard",
    ],
  },
  "outputShape": {
    "goal": "Plain-language demo goal.",
    "steps": [
      {
        "label": "Step label only.",
      },
    ],
    "title": "Short guide title.",
  },
  "product": {
    "audience": "Busy founders who record product demos.",
    "details": "A tool for turning product recordings into short videos.",
    "inferredPainPoints": [
      "Recording demos takes too long.",
    ],
    "inferredProblem": "Demo content is slow to make.",
    "name": "ClipStitchr",
    "websiteUrl": "https://clipstitchr.test",
  },
  "rules": {
    "addCreateSemantics": "For add, create, save, or update goals, prefer typing into matching inputs before using save/create buttons. Treat Accept, Reject, Copy, Save as winner, and similar history or feedback controls as actions for existing items only unless demo.goal explicitly asks to accept, reject, copy, or mark an existing item.",
    "agentRunnable": true,
    "allowedStepVerbs": "Prefer Open, Click, Choose, Select, Upload, Wait for, Review, Use, or Finish on.",
    "bannedStepVerbs": [
      "Point out",
      "Highlight",
      "Explain",
      "Describe",
      "Mention",
      "Talk through",
      "Show where",
      "Show how",
    ],
    "hookLabSemantics": "For Hook Lab goals that ask to add new hooks, save popular hooks, or add hooks to learn from, use the Hooks to learn from field and Save Hook Lab. Do not create steps that accept existing hook cards unless demo.goal explicitly asks to accept existing hooks.",
    "maxSteps": 8,
    "minSteps": 3,
    "missingSetup": "When the goal depends on existing media, connected accounts, saved clips, generated results, or product setup, make steps that open the relevant page and use visible assets. Do not claim unavailable setup exists.",
    "noDestructiveActions": true,
    "noInventedUi": true,
    "noSecrets": true,
    "noSelectors": true,
    "primaryGoal": "Treat demo.goal as the main thing to demonstrate. Do not replace a specific user request with a generic workspace tour.",
    "routeChoice": "If demo.goal names a visible tool and a matching route exists in availableFlows, build the guide around that route.",
    "stepCount": 5,
    "stepLabelOnly": true,
    "typing": "When the goal asks to add safe demo text, write steps that type the actual demo text into the real matching field. Do not call it approved text unless the user provided approved values.",
    "useAppContext": "Use appContext workflow hints to choose real routes, feature labels, field labels, and button names from the app. First choose the workflow hint that matches demo.goal, then use only controls from that workflow. If the user says to add something and appContext lists a matching input, write a step around that visible input and a real matching save/create button from the same workflow. Do not invent Add buttons.",
    "useKnownRoutesWhenPossible": true,
  },
  "task": "Create a browser-action checklist for a guarded ClipStitchr demo agent.",
}
`;

exports[`createCliDemoGuidePrompt > matches the 'web' prompt shape 1`] = `
{
  "agentCapabilities": {
    "can": [
      "open allowed local routes",
      "click visible links or buttons by their accessible name",
      "type safe demo text into visible fields",
      "upload only approved local files",
      "wait for visible text",
      "take a screenshot",
      "finish a step when the requested screen is already visible",
    ],
    "cannot": [
      "point at the screen",
      "highlight UI",
      "narrate or explain out loud",
      "use CSS selectors",
      "operate hidden controls",
      "invent screens, blank workspaces, projects, templates, or export presets",
    ],
  },
  "demo": {
    "appContext": {
      "projectDirectory": "web",
      "projectType": "web",
      "routes": [
        {
          "confidence": "low",
          "name": "Show /dashboard/hooks",
          "path": "/dashboard/hooks",
        },
      ],
      "workflowHints": [
        {
          "actions": [
            "Hooks to learn from",
            "Save Hook Lab",
            "Accept hook",
          ],
          "buttons": [
            "Save Hook Lab",
            "Accept hook",
          ],
          "featureLabels": [
            "Hook Lab",
          ],
          "inputs": [
            "Hooks to learn from",
            "Hooks to avoid",
            "Main goal",
            "Tone",
          ],
          "routePath": "/dashboard/hooks",
          "sourceFiles": [
            "app/_components/hooks/ProductHookMemoryFields.tsx",
          ],
          "summary": "Inputs: Hooks to learn from, Hooks to avoid. Buttons: Save Hook Lab, Accept hook",
          "title": "Hooks workflow",
        },
      ],
    },
    "appType": "web",
    "availableFlows": [
      {
        "confidence": "medium",
        "name": "Open the product",
        "path": "/",
      },
      {
        "confidence": "medium",
        "name": "Show the main workspace",
        "path": "/dashboard",
      },
      {
        "confidence": "low",
        "name": "Show /dashboard/library",
        "path": "/dashboard/library",
      },
      {
        "confidence": "low",
        "name": "Show /dashboard/stitchr",
        "path": "/dashboard/stitchr",
      },
    ],
    "flowName": "Dashboard",
    "flowPath": "/dashboard",
    "goal": "Show the upload flow",
    "targetAudience": "busy founders recording product demos",
  },
  "examples": {
    "bad": [
      "Point out the main dashboard",
      "Highlight the template picker",
      "Show where a creator would upload a clip",
      "Click to start a new project",
      "Highlight export preset options",
    ],
    "good": [
      "Open the dashboard",
      "Click Upload",
      "Open the Library page",
      "Open Stitchr from the sidebar",
      "Review the saved clips on the dashboard",
    ],
  },
  "outputShape": {
    "goal": "Plain-language demo goal.",
    "steps": [
      {
        "label": "Step label only.",
      },
    ],
    "title": "Short guide title.",
  },
  "product": {
    "audience": "Busy founders who record product demos.",
    "details": "A tool for turning product recordings into short videos.",
    "inferredPainPoints": [
      "Recording demos takes too long.",
    ],
    "inferredProblem": "Demo content is slow to make.",
    "name": "ClipStitchr",
    "websiteUrl": "https://clipstitchr.test",
  },
  "rules": {
    "addCreateSemantics": "For add, create, save, or update goals, prefer typing into matching inputs before using save/create buttons. Treat Accept, Reject, Copy, Save as winner, and similar history or feedback controls as actions for existing items only unless demo.goal explicitly asks to accept, reject, copy, or mark an existing item.",
    "agentRunnable": true,
    "allowedStepVerbs": "Prefer Open, Click, Choose, Select, Upload, Wait for, Review, Use, or Finish on.",
    "bannedStepVerbs": [
      "Point out",
      "Highlight",
      "Explain",
      "Describe",
      "Mention",
      "Talk through",
      "Show where",
      "Show how",
    ],
    "hookLabSemantics": "For Hook Lab goals that ask to add new hooks, save popular hooks, or add hooks to learn from, use the Hooks to learn from field and Save Hook Lab. Do not create steps that accept existing hook cards unless demo.goal explicitly asks to accept existing hooks.",
    "maxSteps": 8,
    "minSteps": 3,
    "missingSetup": "When the goal depends on existing media, connected accounts, saved clips, generated results, or product setup, make steps that open the relevant page and use visible assets. Do not claim unavailable setup exists.",
    "noDestructiveActions": true,
    "noInventedUi": true,
    "noSecrets": true,
    "noSelectors": true,
    "primaryGoal": "Treat demo.goal as the main thing to demonstrate. Do not replace a specific user request with a generic workspace tour.",
    "routeChoice": "If demo.goal names a visible tool and a matching route exists in availableFlows, build the guide around that route.",
    "stepCount": 5,
    "stepLabelOnly": true,
    "typing": "When the goal asks to add safe demo text, write steps that type the actual demo text into the real matching field. Do not call it approved text unless the user provided approved values.",
    "useAppContext": "Use appContext workflow hints to choose real routes, feature labels, field labels, and button names from the app. First choose the workflow hint that matches demo.goal, then use only controls from that workflow. If the user says to add something and appContext lists a matching input, write a step around that visible input and a real matching save/create button from the same workflow. Do not invent Add buttons.",
    "useKnownRoutesWhenPossible": true,
  },
  "task": "Create a browser-action checklist for a guarded ClipStitchr demo agent.",
}
`;
